--- a/README.html
+++ b/README.html
@@ -365,8 +365,8 @@ summary {
 </div>
 
 
-<div id="eu_menu_shiny" class="section level1">
-<h1>eu_menu_shiny</h1>
+<div id="eu-menu-shiny" class="section level1">
+<h1>EU MENU shiny</h1>
 <p>The code and data for the shiny app exploring EU MENU food consumption data</p>
 <p>The app is hosted on <a href="https://sglcy.shinyapps.io/EU-MENU_shiny/">shinyapps</a></p>
 <div class="figure">
